// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderCard component snapshots for different order statuses Renders a valid orderCard snapshot with status equal 1 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root card css-bhp9pd-MuiPaper-root-MuiCard-root"
    data-cy="orderCard"
  >
    <div
      class="MuiCardActions-root MuiCardActions-spacing collapseButton css-1t6e9jv-MuiCardActions-root"
    >
      <div
        class="outerInformation MuiBox-root css-0"
      >
        <div
          class="dateInformation MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 orderDate css-ahj2mt-MuiTypography-root"
          >
            Ordered on  19 April 2021
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-17893no-MuiTypography-root"
          >
            Order #2
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 deliveryMark deliveryMark1 css-ahj2mt-MuiTypography-root"
            data-cy="orderCardStatus"
          >
            Waiting for payment
          </p>
        </div>
      </div>
      <div
        class="priceInformation MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 orderPrice css-ahj2mt-MuiTypography-root"
        >
          10 000 $  
        </p>
        <svg
          aria-expanded="false"
          aria-hidden="true"
          aria-label="show more"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium showMoreButton css-i4bv87-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          expand="false"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="Toastify"
  />
</DocumentFragment>
`;

exports[`OrderCard component snapshots for different order statuses Renders a valid orderCard snapshot with status equal 2 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root card css-bhp9pd-MuiPaper-root-MuiCard-root"
    data-cy="orderCard"
  >
    <div
      class="MuiCardActions-root MuiCardActions-spacing collapseButton css-1t6e9jv-MuiCardActions-root"
    >
      <div
        class="outerInformation MuiBox-root css-0"
      >
        <div
          class="dateInformation MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 orderDate css-ahj2mt-MuiTypography-root"
          >
            Ordered on  19 January 2021
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-17893no-MuiTypography-root"
          >
            Order #3
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 deliveryMark deliveryMark2 css-ahj2mt-MuiTypography-root"
            data-cy="orderCardStatus"
          >
            Waiting for delivery
          </p>
        </div>
      </div>
      <div
        class="priceInformation MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 orderPrice css-ahj2mt-MuiTypography-root"
        >
          714 $  
        </p>
        <svg
          aria-expanded="false"
          aria-hidden="true"
          aria-label="show more"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium showMoreButton css-i4bv87-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          expand="false"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="Toastify"
  />
</DocumentFragment>
`;

exports[`OrderCard component snapshots for different order statuses Renders a valid orderCard snapshot with status equal 3 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root card css-bhp9pd-MuiPaper-root-MuiCard-root"
    data-cy="orderCard"
  >
    <div
      class="MuiCardActions-root MuiCardActions-spacing collapseButton css-1t6e9jv-MuiCardActions-root"
    >
      <div
        class="outerInformation MuiBox-root css-0"
      >
        <div
          class="dateInformation MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 orderDate css-ahj2mt-MuiTypography-root"
          >
            Ordered on  19 March 2022
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-17893no-MuiTypography-root"
          >
            Order #4
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 deliveryMark deliveryMark3 css-ahj2mt-MuiTypography-root"
            data-cy="orderCardStatus"
          >
            Delivered
          </p>
        </div>
      </div>
      <div
        class="priceInformation MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 orderPrice css-ahj2mt-MuiTypography-root"
        >
          539 $  
        </p>
        <svg
          aria-expanded="false"
          aria-hidden="true"
          aria-label="show more"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium showMoreButton css-i4bv87-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          expand="false"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="Toastify"
  />
</DocumentFragment>
`;

exports[`OrderCard component snapshots for different order statuses Renders a valid orderCard snapshot with status equal 4 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root card css-bhp9pd-MuiPaper-root-MuiCard-root"
    data-cy="orderCard"
  >
    <div
      class="MuiCardActions-root MuiCardActions-spacing collapseButton css-1t6e9jv-MuiCardActions-root"
    >
      <div
        class="outerInformation MuiBox-root css-0"
      >
        <div
          class="dateInformation MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 orderDate css-ahj2mt-MuiTypography-root"
          >
            Ordered on  19 September 2021
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-17893no-MuiTypography-root"
          >
            Order #5
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 deliveryMark deliveryMark4 css-ahj2mt-MuiTypography-root"
            data-cy="orderCardStatus"
          >
            Cancelled
          </p>
        </div>
      </div>
      <div
        class="priceInformation MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 orderPrice css-ahj2mt-MuiTypography-root"
        >
          274,50 $  
        </p>
        <svg
          aria-expanded="false"
          aria-hidden="true"
          aria-label="show more"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium showMoreButton css-i4bv87-MuiSvgIcon-root"
          data-testid="ExpandMoreIcon"
          expand="false"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="Toastify"
  />
</DocumentFragment>
`;
